# osdUI

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md  vcpkg.json
.github/workflows/: ci.yml
Docs/superpowers/plans/: 2026-03-11-osdui-rewrite.md
Docs/superpowers/specs/: 2026-03-11-osdui-modernization-design.md
app/: CMakeLists.txt  main.cpp
app/dialogs/: dialog_app_tree.cpp  dialog_app_tree.hpp  dialog_data.hpp  dialog_error_info.cpp  dialog_error_info.hpp  dialog_preflight.cpp  dialog_preflight.hpp  dialog_presenter.cpp  dialog_presenter.hpp  dialog_save_items.cpp  dialog_save_items.hpp  dialog_ts_var.cpp  dialog_ts_var.hpp  dialog_user_info.cpp  dialog_user_info.hpp  dialog_user_input.cpp  dialog_user_input.hpp  dialog_vars.cpp  dialog_vars.hpp
app/platform/: env_variables.cpp  env_variables.hpp  ts_variables.cpp  ts_variables.hpp  wmi_client.cpp  wmi_client.hpp  wsh_script_host.cpp  wsh_script_host.hpp
app/resources/: osdui.rc  resource.h
core/: CMakeLists.txt
core/include/osdui/: action_graph.hpp  ihttp_client.hpp  interfaces.hpp  iregistry.hpp  iwmi.hpp  model.hpp
core/src/actions/: action_app_tree.cpp  action_app_tree.hpp  action_default_values.cpp  action_default_values.hpp  action_error_info.cpp  action_error_info.hpp  action_external_call.cpp  action_external_call.hpp  action_file_read.cpp  action_file_read.hpp  action_match.cpp  action_match.hpp  action_preflight.cpp  action_preflight.hpp  action_random_string.cpp  action_random_string.hpp  action_reg_read.cpp  action_reg_read.hpp  action_reg_write.cpp  action_reg_write.hpp  action_rest.cpp  action_rest.hpp  action_runner.cpp  action_runner.hpp  action_save_items.cpp  action_save_items.hpp  action_software_discovery.cpp  action_software_discovery.hpp  action_switch.cpp  action_switch.hpp  action_ts_var.cpp  action_ts_var.hpp  action_ts_var_list.cpp  action_ts_var_list.hpp  action_user_info.cpp  action_user_info.hpp  action_user_input.cpp  action_user_input.hpp  action_vars.cpp  action_vars.hpp  (+4 more)
core/src/config/: config_parser.cpp  config_parser.hpp
core/src/http/: http_client.cpp  http_client.hpp
core/src/logging/: cm_log.cpp  cm_log.hpp
core/src/script/: condition_evaluator.cpp  condition_evaluator.hpp
tests/: CMakeLists.txt  test_action_app_tree.cpp  test_action_batch.cpp  test_action_default_values.cpp  test_action_external_call.cpp  test_action_file_read.cpp  test_action_preflight.cpp  test_action_random_string.cpp  test_action_reg.cpp  test_action_rest.cpp  test_action_runner.cpp  test_action_switch.cpp  test_action_user_info.cpp  test_action_user_input.cpp  test_action_wmi.cpp  test_condition_evaluator.cpp  test_config_parser.cpp  test_interfaces_compile.cpp  test_stub.cpp
tests/fixtures/: apptree_catalog.xml  basic.xml  input_elements.xml  tsvar_set.xml
tests/mocks/: mock_condition_evaluator.hpp  mock_dialog_presenter.hpp  mock_http_client.hpp  mock_registry.hpp  mock_script_host.hpp  mock_variable_store.hpp  mock_wmi.hpp
